prepare for free-tier cloud deployment
- Make CORS allowed origins configurable via ALLOWED_ORIGINS env var (was hardcoded to localhost)
- Process resume files in-memory instead of writing to disk; removes dependency on local filesystem so the app runs correctly on stateless Railway containers
- Delete FileStorageService (no longer needed)
- Add app.cors.allowed-origins config key to application.yml

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>